nobase_include_HEADERS = petibm/amgxsolver.h \
                         petibm/bodypack.h \
                         petibm/boundary.h \
                         petibm/cartesianmesh.h \
                         petibm/delta.h \
                         petibm/flowdescription.h \
                         petibm/kspsolver.h \
                         petibm/linsolver.h \
                         petibm/misc.h \
                         petibm/operators.h \
                         petibm/parser.h \
                         petibm/simulationparameters.h \
                         petibm/singlebody.h \
                         petibm/singleboundary.h \
                         petibm/solutions.h \
                         petibm/timeintegration.h \
                         petibm/types.h
