nobase_include_HEADERS = \
	petibm/bodypack.h \
	petibm/boundary.h \
	petibm/boundarysimple.h \
	petibm/cartesianmesh.h \
	petibm/delta.h \
	petibm/io.h \
	petibm/lininterp.h \
	petibm/linsolveramgx.h \
	petibm/linsolver.h \
	petibm/linsolverksp.h \
	petibm/mesh.h \
	petibm/misc.h \
	petibm/operators.h \
	petibm/parser.h \
	petibm/probes.h \
	petibm/singlebody.h \
	petibm/singlebodypoints.h \
	petibm/singleboundaryconvective.h \
	petibm/singleboundarydirichlet.h \
	petibm/singleboundary.h \
	petibm/singleboundaryneumann.h \
	petibm/singleboundaryperiodic.h \
	petibm/solution.h \
	petibm/solutionsimple.h \
	petibm/timeintegration.h \
	petibm/type.h
