noinst_LIBRARIES = libnavierstokes.a

libnavierstokes_a_SOURCES = navierstokes.cpp

libnavierstokes_a_CPPFLAGS = -I$(top_srcdir)/src/utilities \
                             -I$(top_srcdir)/src/operators \
                             -I$(top_srcdir)/src/linSolvers \
                             -I$(top_srcdir)/external/yaml-cpp-0.5.1/include
