noinst_LTLIBRARIES = liboperators.la

liboperators_la_SOURCES = createbn.cpp \
                          createconvection.cpp \
                          createdelta.cpp \
                          creatediagmatrix.cpp \
                          createdivergence.cpp \
                          creategradient.cpp \
                          createlaplacian.cpp

liboperators_la_CPPFLAGS = -I$(top_srcdir)/include \
                           -I$(top_srcdir)/external/yaml-cpp-0.5.1/include \
                           -I$(top_srcdir)/external/boost-1.57.0
